// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App / renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-dqBHgY hjqzBG"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat eniUlo"
    >
      <div
        class="sc-bxivhb ddQihQ"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-jwKygS ddKfnr"
          >
            <div>
              <h2>
                Audits - 
                State of California
              </h2>
              <p>
                You haven't created any audits yet for 
                State of California
              </p>
            </div>
          </div>
        </div>
        <div
          style="width: 50%;"
        >
          <div
            class="sc-lhVmIH eSSTKD"
          >
            <h2>
              New Audit
            </h2>
            <div
              class="sc-VigVT jXYKmK"
            />
            <div
              class="sc-VigVT jXYKmK"
            >
              <label
                for="auditName"
              >
                <p>
                  Audit name
                </p>
                <div
                  class="sc-bYSBpT gWQJJI sc-cSHVUG gyNSie"
                >
                  <div
                    class="bp3-input-group sc-kAzzGY fpNxNJ"
                  >
                    <input
                      class="bp3-input"
                      id="auditName"
                      name="auditName"
                      style="padding-right: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-VigVT jXYKmK"
            >
              <label
                for="auditType"
              >
                <p>
                  Audit type
                </p>
                <div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="auditType"
                      type="radio"
                      value="BALLOT_POLLING"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Polling
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BATCH_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Batch Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BALLOT_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Comparison
                  </label>
                </div>
              </label>
            </div>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-bwzfXH eBfcXh"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Create Audit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App / renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-dqBHgY hjqzBG"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
          <div
            class="bp3-navbar-heading"
          />
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat eniUlo"
    >
      <div
        class="sc-bxivhb ddQihQ"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-jwKygS ddKfnr"
          >
            <div>
              <h2>
                Jurisdictions - 
                audit one
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-btzYZH cRxpwj"
                href="/election/1/jurisdiction/jurisdiction-id-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction One
                </span>
              </button>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-btzYZH cRxpwj"
                href="/election/1/jurisdiction/jurisdiction-id-3"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Three
                </span>
              </button>
            </div>
            <div>
              <h2>
                Jurisdictions - 
                audit two
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-btzYZH cRxpwj"
                href="/election/2/jurisdiction/jurisdiction-id-2"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Two
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App / renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-dqBHgY hjqzBG"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-cmTdod jtshON"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="bp3-card bp3-elevation-0"
        style="margin: 25px 0px 15px 0px;"
      >
        <p>
          Participating in an audit in your local jurisdiction?
        </p>
        <a
          class="bp3-button bp3-large bp3-intent-primary"
          href="/auth/jurisdictionadmin/start"
          role="button"
          tabindex="0"
        >
          <span
            class="bp3-button-text"
          >
            Log in to your audit
          </span>
        </a>
      </div>
      <div>
        <p>
          State-level audit administrators:
           
          <a
            href="/auth/auditadmin/start"
          >
            Log in as an admin
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-dqBHgY hjqzBG"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat eniUlo"
    >
      <div
        class="sc-bxivhb ddQihQ"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-jwKygS ddKfnr"
          >
            <div>
              <h2>
                Audits - 
                State of California
              </h2>
              <p>
                You haven't created any audits yet for 
                State of California
              </p>
            </div>
          </div>
        </div>
        <div
          style="width: 50%;"
        >
          <div
            class="sc-lhVmIH eSSTKD"
          >
            <h2>
              New Audit
            </h2>
            <div
              class="sc-VigVT jXYKmK"
            />
            <div
              class="sc-VigVT jXYKmK"
            >
              <label
                for="auditName"
              >
                <p>
                  Audit name
                </p>
                <div
                  class="sc-bYSBpT gWQJJI sc-cSHVUG gyNSie"
                >
                  <div
                    class="bp3-input-group sc-kAzzGY fpNxNJ"
                  >
                    <input
                      class="bp3-input"
                      id="auditName"
                      name="auditName"
                      style="padding-right: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-VigVT jXYKmK"
            >
              <label
                for="auditType"
              >
                <p>
                  Audit type
                </p>
                <div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="auditType"
                      type="radio"
                      value="BALLOT_POLLING"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Polling
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BATCH_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Batch Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BALLOT_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Comparison
                  </label>
                </div>
              </label>
            </div>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-bwzfXH eBfcXh"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Create Audit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders ab logged in properly 1`] = `<div />`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-dqBHgY hjqzBG"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
          <div
            class="bp3-navbar-heading"
          />
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat eniUlo"
    >
      <div
        class="sc-bxivhb ddQihQ"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-jwKygS ddKfnr"
          >
            <div>
              <h2>
                Jurisdictions - 
                audit one
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-btzYZH cRxpwj"
                href="/election/1/jurisdiction/jurisdiction-id-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction One
                </span>
              </button>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-btzYZH cRxpwj"
                href="/election/1/jurisdiction/jurisdiction-id-3"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Three
                </span>
              </button>
            </div>
            <div>
              <h2>
                Jurisdictions - 
                audit two
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-btzYZH cRxpwj"
                href="/election/2/jurisdiction/jurisdiction-id-2"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Two
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-right"
    >
      <div
        class="Toastify__toast Toastify__toast--error Toastify__bounce-enter--top-right"
        style="animation-fill-mode: forwards; animation-duration: 0.75s;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          UNAUTHORIZED
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--error"
          type="button"
        >
          ✖
        </button>
        <div
          class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar--error"
          style="animation-duration: 5000ms; animation-play-state: running; opacity: 1;"
        />
      </div>
    </div>
  </div>
  <div
    class="sc-dqBHgY hjqzBG"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-cmTdod jtshON"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="bp3-card bp3-elevation-0"
        style="margin: 25px 0px 15px 0px;"
      >
        <p>
          Participating in an audit in your local jurisdiction?
        </p>
        <a
          class="bp3-button bp3-large bp3-intent-primary"
          href="/auth/jurisdictionadmin/start"
          role="button"
          tabindex="0"
        >
          <span
            class="bp3-button-text"
          >
            Log in to your audit
          </span>
        </a>
      </div>
      <div>
        <p>
          State-level audit administrators:
           
          <a
            href="/auth/auditadmin/start"
          >
            Log in as an admin
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-dqBHgY hjqzBG"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat eniUlo"
    >
      <div
        class="sc-bxivhb ddQihQ"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-jwKygS ddKfnr"
          >
            <div>
              <h2>
                Audits - 
                State of California
              </h2>
              <p>
                You haven't created any audits yet for 
                State of California
              </p>
            </div>
          </div>
        </div>
        <div
          style="width: 50%;"
        >
          <div
            class="sc-lhVmIH eSSTKD"
          >
            <h2>
              New Audit
            </h2>
            <div
              class="sc-VigVT jXYKmK"
            />
            <div
              class="sc-VigVT jXYKmK"
            >
              <label
                for="auditName"
              >
                <p>
                  Audit name
                </p>
                <div
                  class="sc-bYSBpT gWQJJI sc-cSHVUG gyNSie"
                >
                  <div
                    class="bp3-input-group sc-kAzzGY fpNxNJ"
                  >
                    <input
                      class="bp3-input"
                      id="auditName"
                      name="auditName"
                      style="padding-right: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-VigVT jXYKmK"
            >
              <label
                for="auditType"
              >
                <p>
                  Audit type
                </p>
                <div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="auditType"
                      type="radio"
                      value="BALLOT_POLLING"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Polling
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BATCH_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Batch Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BALLOT_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Comparison
                  </label>
                </div>
              </label>
            </div>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-bwzfXH eBfcXh"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Create Audit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-dqBHgY hjqzBG"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
          <div
            class="bp3-navbar-heading"
          >
            Jurisdiction: Jurisdiction One
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat eniUlo"
    >
      <div
        class="bp3-callout sc-eHgmQL gudjM"
      >
        <div
          class="sc-bxivhb ddQihQ"
        >
          <div
            class="text"
          >
            <h4
              class="bp3-heading"
            >
              The audit has not started.
            </h4>
            <p>
              Ballot manifest not uploaded.
            </p>
          </div>
        </div>
      </div>
      <div
        class="sc-bxivhb sc-caSCKo dwxpIg"
      >
        <h2
          class="bp3-heading sc-gzVnrw hQaoin"
        >
          Audit Source Data
        </h2>
        <form>
          <div
            class="sc-dnqmqq kymPuI"
          >
            <h2
              class="bp3-heading sc-gzVnrw hQaoin"
            />
            <div
              class="sc-VigVT jXYKmK"
            >
              <h4
                class="bp3-heading"
              >
                Ballot Manifest
              </h4>
              <div
                class="sc-jTzLTM jNuIPn"
              >
                Click "Browse" to choose the appropriate Ballot Manifest file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many ballot cards (individual pieces of paper) are stored in each container.
                <br />
                <br />
                <a
                  href="/sample_ballot_manifest.csv"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  (Click here to view a sample file in the correct format.)
                </a>
              </div>
            </div>
            <div
              class="sc-VigVT jXYKmK"
            >
              <label
                class="bp3-file-input"
              >
                <input
                  accept=".csv"
                  name="csv"
                  type="file"
                />
                <span
                  class="bp3-file-upload-input"
                >
                  Select a CSV...
                </span>
              </label>
            </div>
            <div>
              <button
                class="bp3-button bp3-intent-primary sc-bwzfXH eBfcXh"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Upload File
                </span>
              </button>
            </div>
          </div>
        </form>
        <form>
          <div
            class="sc-dnqmqq kymPuI"
          >
            <h2
              class="bp3-heading sc-gzVnrw hQaoin"
            />
            <div
              class="sc-VigVT jXYKmK"
            >
              <h4
                class="bp3-heading"
              >
                Candidate Totals by Batch
              </h4>
              <div
                class="sc-jTzLTM jNuIPn"
              >
                Click "Browse" to choose the appropriate Candidate Totals by Batch file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many votes were counted for each candidate in each of those containers.
                <br />
                <br />
                <a
                  href="/sample_candidate_totals_by_batch.csv"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  (Click here to view a sample file in the correct format.)
                </a>
              </div>
            </div>
            <div
              class="sc-VigVT jXYKmK"
            >
              <label
                class="bp3-file-input bp3-disabled"
              >
                <input
                  accept=".csv"
                  disabled=""
                  name="csv"
                  type="file"
                />
                <span
                  class="bp3-file-upload-input"
                >
                  Select a CSV...
                </span>
              </label>
            </div>
            <div>
              <button
                class="bp3-button bp3-disabled bp3-intent-primary sc-bwzfXH eBfcXh"
                disabled=""
                tabindex="-1"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Upload File
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-right"
    >
      <div
        class="Toastify__toast Toastify__toast--error Toastify__bounce-enter--top-right"
        style="animation-fill-mode: forwards; animation-duration: 0.75s;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          UNAUTHORIZED
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--error"
          type="button"
        >
          ✖
        </button>
        <div
          class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar--error"
          style="animation-duration: 5000ms; animation-play-state: running; opacity: 1;"
        />
      </div>
    </div>
  </div>
  <div
    class="sc-dqBHgY hjqzBG"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ftKVqf"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-cmTdod jtshON"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="bp3-card bp3-elevation-0"
        style="margin: 25px 0px 15px 0px;"
      >
        <p>
          Participating in an audit in your local jurisdiction?
        </p>
        <a
          class="bp3-button bp3-large bp3-intent-primary"
          href="/auth/jurisdictionadmin/start"
          role="button"
          tabindex="0"
        >
          <span
            class="bp3-button-text"
          >
            Log in to your audit
          </span>
        </a>
      </div>
      <div>
        <p>
          State-level audit administrators:
           
          <a
            href="/auth/auditadmin/start"
          >
            Log in as an admin
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;
